--- a/.github/workflows/caller.yml
+++ b/.github/workflows/caller.yml
@@ -25,9 +25,7 @@ jobs:
           curl \
             -X POST \
             -H "Accept: application/vnd.github+json" \ 
-            -H "Authorization: token ${GITHUB_TOKEN}" \
+            -H "Authorization: token ${{ secrets.GITHUB_TOKEN }}" \
             https://api.github.com/repos/ZhongpinWang/workflow-test/actions/workflows/callee/dispatches \
             -d '{"ref":"main","inputs":{}}'
           echo ${{ GITHUB_TOKEN }}
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
