--- a/.github/workflows/caller.yml
+++ b/.github/workflows/caller.yml
@@ -24,8 +24,8 @@ jobs:
         run: |
           curl \
             -X POST \
-            -H "Accept: application/vnd.github+json" \ 
-            -H "Authorization: token ${{ secrets.GITHUB_TOKEN }}" \
+            -H 'accept: application/vnd.github+json' \ 
+            -H 'Authorization: token ${{ secrets.GITHUB_TOKEN }}' \
             https://api.github.com/repos/ZhongpinWang/workflow-test/actions/workflows/callee/dispatches \
             -d '{"ref":"main","inputs":{}}'
           echo ${{ secrets.GITHUB_TOKEN }}
