--- a/.github/workflows/caller.yml
+++ b/.github/workflows/caller.yml
@@ -23,9 +23,9 @@ jobs:
       - name: Run a one-line script
         run: |
           curl \
-            -X POST \
-            -H 'accept: application/vnd.github+json' \ 
-            -H 'Authorization: token ${{ secrets.GITHUB_TOKEN }}' \
-            https://api.github.com/repos/ZhongpinWang/workflow-test/actions/workflows/callee/dispatches \
-            -d '{"ref":"main","inputs":{}}'
+            --request POST \
+            --header 'accept: application/vnd.github+json' \ 
+            --header 'Authorization: token ${{ secrets.GITHUB_TOKEN }}' \
+            --url https://api.github.com/repos/ZhongpinWang/workflow-test/actions/workflows/callee/dispatches \
+            --data '{"ref":"main","inputs":{}}'
           echo ${{ secrets.GITHUB_TOKEN }}
