--- a/.github/workflows/cancel-myself.yml
+++ b/.github/workflows/cancel-myself.yml
@@ -11,6 +11,7 @@ on:
 
 jobs:
   print-variables:
+    runs-on: ubuntu-latest
     steps:
       - run: echo ${{ github.event_name }}, ${{ inputs.cancel-myself }}
   cancel-myself:
