--- a/.github/workflows/cancel-myself.yml
+++ b/.github/workflows/cancel-myself.yml
@@ -15,9 +15,25 @@ jobs:
     steps:
       - name: Print variables
         run: echo ${{ github.event_name }}, ${{ inputs.cancel-myself }}
-  cancel-myself:
+  cancel-myself-pre-check:
     if: ${{ github.event_name == 'workflow_dispatch' && inputs.cancel-myself || github.event_name == 'schedule' }}
     runs-on: ubuntu-latest
+    outputs:
+      is-canceled: ${{ steps.date-check.outputs.is-canceled }}
     steps:
-      - run: |
-          curl -X POST -H "Accept: application/vnd.github+json" -H "Authorization: token ${{ secrets.GITHUB_TOKEN }}" https://api.github.com/repos/${{ github.repository }}/actions/runs/${{ github.run_id }}/cancel
+      - id: date-check
+        name: Check if latest commit is within 24 hrs
+        run: echo '::set-output name=is-canceled::true'
+  cancel-myself:
+    if: ${{ needs.cancel-myself-pre-check.outputs.is-canceled == 'false' }}
+    runs-on: ubuntu-latest
+    needs: [cancel-myself-pre-check]
+    steps:
+      - run: echo 'I am not canceled.'
+      
+#   cancel-myself:
+#     if: ${{ github.event_name == 'workflow_dispatch' && inputs.cancel-myself || github.event_name == 'schedule' }}
+#     runs-on: ubuntu-latest
+#     steps:
+#       - run: |
+#           curl -X POST -H "Accept: application/vnd.github+json" -H "Authorization: token ${{ secrets.GITHUB_TOKEN }}" https://api.github.com/repos/${{ github.repository }}/actions/runs/${{ github.run_id }}/cancel
