--- a/.github/workflows/cancel-myself.yml
+++ b/.github/workflows/cancel-myself.yml
@@ -25,7 +25,7 @@ jobs:
         name: Check if latest commit is within 24 hrs
         run: echo '::set-output name=is-canceled::false'
   cancel-myself:
-    if: ${{ needs.cancel-myself-pre-check.outputs.is-canceled == 'false' }}
+    if: ${{ needs.cancel-myself-pre-check.outputs.is-canceled == false }}
     runs-on: ubuntu-latest
     needs: [cancel-myself-pre-check]
     steps:
